Added self generation on load.

--- a/public/index.html
+++ b/public/index.html
@@ -43,34 +43,7 @@
 
   <div class="center">
     <table id='scoretable' style="width:auto">
-
-      <tr>
-        <th>Placing</th>
-        <th>Player Name</th>
-        <th>Clicks Per Second</th>
-        <th>Total Clicks</th>
-        <th>Seconds</th>
-        <th>Input Time (H:min)</th>
-      </tr>
-
-      <tr>
-        <td>#1</td>
-        <td>Mr. Insano</td>
-        <td>105.1</td>
-        <td>1051</td>
-        <td>10</td>
-        <td>5:53</td>
-      </tr>
-
-      <tr>
-        <td>#2</td>
-        <td>Matthew</td>
-        <td>5.4</td>
-        <td>54</td>
-        <td>10</td>
-        <td>1:19</td>
-      </tr>
-
+      <!---Table stuff will be generated here-->
     </table>
   </div>
 
