--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <title>CS4241 Assignment 2- A To-Do List</title>
+    <meta charset="utf-8" />
+
+    <link rel="stylesheet" href="css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/f2ed49c70e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kufam&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+    <form action="" method="post">
+      <div class="container">
+        <div class="header">
+          <h1>To-Do</h1>
+          <input
+            type="text"
+            id="toDoInput"
+            placeholder="What needs to be done?"
+          />
+        </div>
+
+        <div class="priorities">
+          <h2>Priority Level</h2>
+
+          <select id="priority" name="priorityLevel">
+            <option value="high">High</option>
+            <option value="medium">Medium</option>
+            <option value="low">Low</option>
+          </select>
+
+          <div class="chooseDate">
+            <h2>Due Date</h2>
+            <input type="date" id="chosenDate" />
+          </div>
+
+          <button id="add" type="button" onclick="toDoList()">
+            Add to List
+          </button>
+
+          <!--<input type="submit" value="Submit">-->
+        </div>
+      </div>
     </form>
+
+    <div class="row">
+      <div class="column">
+        <div class="toDo">
+          <h2>To-Do</h2>
+          <ol id="toDoList"></ol>
+        </div>
+      </div>
+      <div class="column">
+        <div class="prior">
+          <h2>Priority</h2>
+          <ol id="priorityList"></ol>
+        </div>
+      </div>
+      <div class="column">
+        <div class="date">
+          <h2>Date</h2>
+          <ol id="dateList"></ol>
+        </div>
+      </div>
+    </div>
   </body>
-  <script>
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+  <script type="text/javascript" src="js/scripts.js"></script>
 </html>
