--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,21 @@
       <button id="delete">delete</button>
     </form>
 
+    <h3>All Players</h3>
     <table id="activeUsersTable">
       <thead><tr><th>Username----</th><th>Guess----</th><th>Status----</th><th>Total Attempts----</th><th>Most Recent Submission----</th></tr></thead>
       <tbody id="activeUsersList"></tbody>
     </table>
 
+    <!-- TODO remove these -->
+    <br>
+    <br>
+    <br>
+
+    <h3>Rankings</h3>
+    <table id="rankingsTable">
+      <thead><th>Rank----</th><th>Username----</th><th>Total Attempts----</th><th>Time of Win----</th></tr></thead>
+      <tbody id="rankingsList"></tbody>
+    </table>
   </body>
 </html>
