--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,43 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
+    <title>CS4241 Assignment 2 - Matt Tolbert</title>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet" />
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <div>
+      <h1>Golf Club Tracker</h1>
+      <h2>Keep track of your clubs by distance! Free estimates of your ball & swing speed!</h2>
+    </div>
+    <div class="inputForm">
+      <form id="clubForm" action="">
+        <input type='text' id='clubManufacturer' value="Manufacturer">
+        <input type='text' id='clubModel' value="Model">
+        <input type='text' id='clubType' value="Club Type">
+        <input type='text' id='clubLoft' value="Club Loft (degrees)">
+        <input type='text' id='clubDistance' value="Club Carry (yds)">
+        <button>Submit</button>
+      </form>
+    </div>
+    <div class="grid-container">
+      <div class="golfBag">
+        <table>
+          <thead>
+            <tr>
+              <th>Manufacturer</th>
+              <th>Model</th>
+              <th>Type</th>
+              <th>Loft (degrees)</th>
+              <th>Distance (yds)</th>
+              <th>Ball Speed (mph)</th>
+              <th>Swing Speed (mph)</th>
+            </tr>
+          </thead>
+          <tbody id="clubs"></tbody>
+        </table>
+      </div>
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
