--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <option value = "red">Red</option>
       <option value = "green">Green</option>
       <option value = "purple">Purple</option>
-      <option value = "orange">Green</option>
+      <option value = "orange">Orange</option>
       <option value = "yellow">Yellow</option>
       <option value = "white">White</option>
       <option value = "black">Black</option>
@@ -38,7 +38,7 @@
 
   const submitOrder = function( e ) {
     // prevent default form action from being carried out
-    e.preventDefault()
+    e.preventDefault();
 
     const color = document.getElementById( 'color' ),
             quantity = document.getElementById('quantity'),
@@ -65,7 +65,7 @@
 
   const fulfillOrder = function(e) {
     // prevent default form action from being carried out
-    e.preventDefault()
+    e.preventDefault();
 
     const orderNum = document.getElementById( 'orderNum' ),
             json = {type: "fulfill", orderNum: orderNum.value},
