Updated readme to contain design achievements

--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     </div>
     <div class="inputForm">
       <form id="clubForm" action="">
-        <input type='text' id='clubManufacturer' value="Manufacturer">
-        <input type='text' id='clubModel' value="Model">
-        <input type='text' id='clubType' value="Club Type">
-        <input type='text' id='clubLoft' value="Club Loft (degrees)">
-        <input type='text' id='clubDistance' value="Club Carry (yds)">
+        <input type='text' id='clubManufacturer' placeholder="Manufacturer">
+        <input type='text' id='clubModel' placeholder="Model">
+        <input type='text' id='clubType' placeholder="Club Type">
+        <input type='text' id='clubLoft' placeholder="Club Loft (degrees)">
+        <input type='text' id='clubDistance' placeholder="Club Carry (yds)">
         <button>Submit</button>
       </form>
     </div>
