--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!doctype html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
@@ -19,10 +18,10 @@
           <h3>Add an item</h3>
         </div>
         <div>
-          <form name="inputForm">
+          <form name="inputForm" method ="post">
             <input type="text" id="youtask" value="Task">
             <input type="date" id="duedate" value="Due Date">
-            <button id="submit">Submit</button>
+            <button id="myinput">Submit</button>
           </form>
         </div>
       </div>
