Fixed validation stuff

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <h2>Keep track of your clubs by distance! Free estimates of your ball & swing speed!</h2>
     </div>
     <div class="inputForm">
-      <form id="clubForm" action="">
+      <form id="clubForm">
         <input type='text' id='clubManufacturer' placeholder="Manufacturer">
         <input type='text' id='clubModel' placeholder="Model">
         <input type='text' id='clubType' placeholder="Club Type">
