--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+<head>
+    <title>Musician DB</title>
+    <meta charset="UTF-8">
+    <meta name="author" content="Jake Pelrah">
+
+    <!-- JavaScript -->
+    <script src="js/form.js"></script>
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+
+<header>
+    <h1 id="header_title">Musician Database</h1>
+</header>
+
+
+<body>
+
+<section id="main_grid">
+
+    <section id="musician_records">
+
+
+    </section>
+
+    <form id="page_form" action="" method="post">
+        <label id="artist_label" for="artist_input">Artist:</label>
+        <input id="artist_input" type="text" name="artist_name">
+
+        <label id="born_label" for="born_input">Born:</label>
+        <input id="born_input" type="date" name="born">
+
+        <label id="birthplace_label"
+               for="birthplace_input">Birthplace:</label>
+        <input id="birthplace_input" type="text" name="birthplace">
+
+        <label id="died_label" for="died_input">Died:</label>
+        <input id="died_input" type="date" name="died">
+
+        <label id="genre_label" for="genre_input">Genre:</label>
+        <input id="genre_input" type="text" name="genre">
+
+        <button id="register_button">REGISTER</button>
+
+        <button id="delete_button">Delete Entry:</button>
+        <input id="delete_input" type="number" name="delete">
     </form>
-  </body>
-  <script>
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+</section>
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+</body>
 </html>
