--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
+
 <head>
     <title>Musician DB</title>
+
     <meta charset="UTF-8">
+
     <meta name="author" content="Jake Pelrah">
 
     <!-- JavaScript -->
     <script src="js/form.js"></script>
+
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 
@@ -21,10 +27,7 @@
 
 <section id="main_grid">
 
-    <section id="musician_records">
-
-
-    </section>
+    <section id="musician_records"></section>
 
     <form id="page_form" action="" method="post">
         <label id="artist_label" for="artist_input">Artist:</label>
@@ -49,8 +52,10 @@
         <input id="delete_input" type="number" name="delete">
     </form>
 
-
 </section>
 
+
 </body>
+
+
 </html>
