--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/scripts.js"></script>
+
+</head>
+
+<body>
+    <h1 class="header">TO-DO List:</h1>
+    <h2 class="header">Enter in your items below for what you have to do today!</h2>
+
+    <table id="todo-list">
+        <tr>
+            <th>Task</th>
+            <th>Priority Level</th>
+            <th>Assigned Date</th>
+            <th>Deadline</th>
+        </tr>
+    </table>
+    <br>
+    <form>
+        <p>Enter new task:</p>
+        <input type='text' id='newitem' placeholder="E.g. do laundry"><br><br>
+        <p>Enter the task's priority rating 1-5:</p>
+        <p>(1 = highest importance, 5 = least importance)</p>
+        <input type='number' id='priority' placeholder=""><br><br>
+        <p>Enter the date that this task was assigned to you:</p>
+        <input type='date' id='assigneddate'><br><br>
+        <button id="new_item">Add new task!</button>
     </form>
-  </body>
-  <script>
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+</body>
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
