--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
-  </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+<head>
+  <title>CS4241 Assignment 2</title>
+  <meta charset="utf-8" />
+</head>
+<body>
+<link href="css/style.css" rel="stylesheet" type="text/css" />
+<link
+        href="https://fonts.googleapis.com/css2?family=Roboto"
+        rel="stylesheet"
+/>
+<script src="js/scripts.js"></script>
+<h1 id="title">
+  League of Legends KDA Calculator
+</h1>
+<h2>
+  Enter kills, deaths and assists below to calculate KDA.
+</h2>
+<p>
+  KDA = (Kills + Assists) / Deaths
+</p>
+<div class="container">
+  <form>
+    <input type="number" id="kills" placeholder="Kills" />
+    <input type="number" id="deaths" placeholder="Deaths" />
+    <input type="number" id="assists" placeholder ="Assists"/>
+    <button>submit</button>
+  </form>
+  <table id="kdatable">
+    <tr>
+      <th>Kills</th>
+      <th>Deaths</th>
+      <th>Assists</th>
+      <th>KDA</th>
+    </tr>
+  </table>
+</div>
+</body>
 </html>
