--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
 
 <section id="main_grid">
 
-    <section id="musician_records"></section>
+    <div id="musician_records"></div>
 
-    <form id="page_form" action="" method="post">
+    <form id="page_form" action="/" method="post">
         <label id="artist_label" for="artist_input">Artist:</label>
         <input id="artist_input" type="text" name="artist_name">
 
