--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <h1 id="header_title">Musician Database</h1>
 </header>
 
-<section id="main_grid">
+<div id="main_grid">
 
     <div id="musician_records"></div>
 
@@ -50,7 +50,7 @@
         <input id="delete_input" type="number" name="delete">
     </form>
 
-</section>
+</div>
 
 
 </body>
