ran npm install mime

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,15 @@
       rel="stylesheet"
     />
     <script src="js/scripts.js"></script>
-    <img src="images/books.jpg" alt="an open book" width="1600" height="300" />
+    <img src="images/books.jpg" alt="an open book" width="1520" height="300" />
     <div class="container">
-      <form action="">
-        <input type="text" id="title" placeholder="Book Title" />
-        <input type="number" id="pages" placeholder="# of Pages" min="1" />
-        <button>submit</button>
-      </form>
+      <div>
+        <form action="">
+          <input type="text" id="title" placeholder="Book Title" />
+          <input type="number" id="pages" placeholder="# of Pages" min="1" />
+          <button>submit</button>
+        </form>
+      </div>
       <table id="booklist">
         <tr>
           <th scope="col">Book Title</th>
