--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,24 @@
 <!doctype html>
+<link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <script src="js/scripts.js"></script>
   </head>
   <body>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      <input type="text" id="task" value="" placeholder="task name">
+      <input type="text" id="priority" value="" placeholder="priority (low number = high)">
+      <button id="submitButton">Add Task</button>
     </form>
+    <ul id="titles">
+      <p>Task Name</p>
+      <p>Priority</p>
+      <p>Start Date</p>
+      <p>Finish By</p>
+    </ul>
+    <ul id="taskList"></ul>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
