Fixed validation errors

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <br><h1>Coronavirus Symptom Tracker 2.0</h1><br>
-    <button type="button" class="collapsible"><h2>Make a new user</h2></button>
+    <button type="button" class="largeTitle collapsible">Make a new user</button>
     <div class="content">
       <br>
-      <form action="">
+      <form>
         <div class="rows2">
           <label for="userName">User Name:<br>
             <input type="text" id="userName" value="">
@@ -27,7 +27,7 @@
             <input type="number" id="userTemp" value="">
           </label>
         </div><br><br>
-        <button type="button" class="collapsible symptom"><h3>Do you have any of the following symptoms on a regular basis?</h3></button>
+        <button type="button" class="collapsible symptom smallTitle">Do you have any of the following symptoms on a regular basis?</button>
         <div class="content symptom"><br>
           <div class="symptomColumns">
             <label for="userChills">Chills:
@@ -68,10 +68,10 @@
         <br><br><button id="newUserButton">Submit</button>
       </form><br>
     </div><br><br>
-    <button type="button" class="collapsible"><h2>Update a Current User</h2></button>
+    <button type="button" class="collapsible largeTitle">Update a Current User</button>
     <div class="content">
       <br>
-      <form action="">
+      <form>
         <div class="rows3">
           <label for="updateUserName">User Name:
             <input type="text" id="updateUserName" value="">
@@ -91,7 +91,7 @@
             <input type="checkbox" id="updateUserContact" value="0">
           </label>
         </div><br>
-        <button type="button" class="collapsible symptom"><h3>Do you have any of the following symptoms today?</h3></button>
+        <button type="button" class="collapsible symptom smallTitle">Do you have any of the following symptoms today?</button>
         <div class="content symptom"><br>
           <div class="symptomColumns">
             <label for="updateUserChills">Chills:
