finished status, need readme

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-
+<link rel="stylesheet" href="css/style.css"></link>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet"> 
 <html lang="en">
   <head>
+    
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8" />
   </head>
   <body>
     <script src="js/scripts.js"></script>
     <h1>Alex's Training Log</h1>
+    <hr />
     <form id="input" action="submit">
       <label for="inputRoute">Route Name</label>
       <input type="text" id="inputRoute" value="" /><br />
@@ -16,7 +19,7 @@
       <label for="inputDistance">Distance (in miles)</label>
       <input type="text" id="inputDistance" value="" /><br />
       <p></p>
-      <button>submit</button>
+      <button>Submit</button>
     </form>
     <hr />
     <table>
