--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="css/style.css"></link>
+<link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet"> 
-<html lang="en">
+<html>
   <head>
-    
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8" />
   </head>
