--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet"> 
-<html>
+<html lang="en-us">
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8" />
