--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <link rel="stylesheet" href="\css\style.css">
+    <link rel="stylesheet" href="css\style.css">
     <link href='https://fonts.googleapis.com/css?family=Alegreya SC' rel='stylesheet'>
     <meta charset="utf-8">
 <style>
@@ -29,9 +29,9 @@ body {
 
       <div class="content-1" id="section">    
         <form action="">
-        <p>Task name<br><input type='text' id='Task' value=""></align-right></p>
-        <p>Difficulty level (1-9)<br><input type='text' id='Difficulty' value=""></p>
-        <p>Days until deadline<br><input type='text' id='Deadline' value=""></p>
+        <p>Task name<br><input type='text' id='Task' value="Enter Task"></align-right></p>
+        <p>Difficulty level (1-9)<br><input type='text' id='Difficulty' value="Enter Difficulty"></p>
+        <p>Days until deadline<br><input type='text' id='Deadline' value="Enter Deadline"></p>
         <button>submit</button>
       </form></div>
 
@@ -43,7 +43,6 @@ body {
 
   
   <script>
-
   const submit = function( e ) {
     // prevent default form action from being carried out
     e.preventDefault()
