--- a/public/results.html
+++ b/public/results.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="\css\style.css">
         <meta charset="UTF-8">
-        <link href='https://fonts.googleapis.com/css?family=Alegreya SC' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Alegreya SC'>
         <style>
         body {
             font-family: 'Alegreya SC';font-size: 20px;
