--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@ body {
 
       <div class="content-1" id="section">    
         <form action="">
-        <p>Task name<br><input type='text' id='Task' value="Enter Task"></align-right></p>
+        <p>Task name<br><input type='text' id='Task' value="Enter Task"></p>
         <p>Difficulty level (1-9)<br><input type='text' id='Difficulty' value="Enter Difficulty"></p>
         <p>Days until deadline<br><input type='text' id='Deadline' value="Enter Deadline"></p>
         <button>submit</button>
