--- a/public/results.html
+++ b/public/results.html
@@ -3,16 +3,16 @@
     <head>
         <link rel="stylesheet" href="\css\style.css">
         <meta charset="UTF-8">
-        <link href='https://fonts.googleapis.com/css?family=Alegreya SC'>
+        <link href='https://fonts.googleapis.com/css?family=Alegreya SC' rel='stylesheet'>
         <style>
         body {
             font-family: 'Alegreya SC';font-size: 20px;
         }
         </style>
         <title>CS4241 Assignment 2</title>
-        <h1>Task Prioritization Results</h1>
     </head>
     <body>
+        <h1>Task Prioritization Results</h1>
         <table>
             <!-- here goes our data-->
         </table>
