--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,109 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <script>
+      let numAccessed = 0;
+      function addLine(item, index) {}
+      const submit = function(e) {
+        // prevent default form action from being carried out
+        e.preventDefault();
+
+        const input = document.querySelector("#yourname"),
+          input2 = document.querySelector("#age"),
+          input3 = document.querySelector("#homestate"),
+          json = {
+            yourname: input.value,
+            age: input2.value,
+            homestate: input3.value
+          },
+          body = JSON.stringify(json);
+
+        fetch("/submit", {
+          method: "POST",
+          body
+        })
+          .then(function(response) {
+            // do something with the reponse
+            return response.json();
+          })
+          .then(function(json) {
+            console.log(json);
+            numAccessed = 0;
+            var tableStart = 1;
+            var initTable = document.getElementById("results");
+            var rowCount = initTable.rows.length;
+            for (var i = tableStart; i < rowCount; i++) {
+              initTable.deleteRow(tableStart);
+            }
+            for (index in json) {
+              var table = document.getElementById("results");
+              var row = table.insertRow(numAccessed + 1);
+              var cell = row.insertCell(0);
+              var cell2 = row.insertCell(1);
+              var cell3 = row.insertCell(2);
+              var cell4 = row.insertCell(3);
+              cell.innerHTML = json[index].yourname;
+              cell2.innerHTML = json[index].age;
+              cell3.innerHTML = json[index].homestate;
+              cell4.innerHTML = json[index].isLegal;
+              numAccessed++;
+            }
+          });
+
+        return false;
+      };
+
+      window.onload = function() {
+        const button = document.querySelector("button");
+        button.onclick = submit;
+      };
+      function showResults() {
+        var table = document.getElementById("results");
+        if (table.style.display === "none") {
+          table.style.display = "block";
+        } else {
+          table.style.display = "none";
+        }
+      }
+    </script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <div class="grid-container">
+      <div class="grid-item">
+        <h2>
+          Drinker Database
+        </h2>
+        <h4>
+          Enter Your information Below
+        </h4>
+      </div>
+      <div class="grid-item">
+        <form>
+          <input type="text" id="yourname" value="Name" /><br /><br />
+          <input type="text" id="age" value="Age" /><br /><br />
+          <input type="text" id="homestate" value="Birth State" /><br />
+          <button>submit</button>
+        </form>
+      </div>
+      <div class="results">
+        <button onclick="showResults()">
+          Show Data
+        </button>
+        <table id="results" style="display:none;">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>State</th>
+              <th>Can they Drink?</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
