--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
+    <title>AccuMouse - CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <script src="js/scripts.js"></script>
   </head>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  
   <body>
-    <h1>Mouse Accuracy Game</h1>
+    <h1>AccuMouse - The Mouse Accuracy Game</h1>
     <h2>Try to click on as many circles as possible</h2>
     <button onclick="playGame()">START</button>
       <div id = "gameWindow"></div>
       <h3 id = "score">Score = 0</h3>
-    <form action="">
+    <form>
       <input type='text' id='yourname' value="your name here">
       <button id="form">submit</button>
     </form>
@@ -31,5 +33,5 @@
       </tbody>
     </table>
   </body>
-  <script src="js/scripts.js"></script>
+  
 </html>
