--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <title>AccuMouse - CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <script src="js/scripts.js"></script>
+    <script  src="js/scripts.js" async></script>
+    
   </head>
   
   <body>
@@ -14,7 +16,7 @@
     <button onclick="playGame()">START</button>
       <div id = "gameWindow"></div>
       <h3 id = "score">Score = 0</h3>
-    <form>
+    <form >
       <input type='text' id='yourname' value="your name here">
       <button id="form">submit</button>
     </form>
