--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/scripts.js"></script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+    <h1>
+      Assignment 2 - Short Stack (To-Do List)
+    </h1>
+    <form>
+      <label for="taskName" style="grid-column-start: 3;">Task Name: </label>
+      <input
+        type="text"
+        style="background-color: gray; font-family: 'Poppins', sans-serif; grid-column-start: 3;"
+        id="taskName"
+        name="taskName"
+        value="Task Name"
+      />
+      <label for="taskPriority" style="grid-column-start: 3;">Priority: </label>
+      <input
+        type="text"
+        style="background-color: gray; font-family: 'Poppins', sans-serif; grid-column-start: 3;"
+        id="taskPriority"
+        name="taskPriority"
+        value="#"
+      />
+      <input
+        type="checkbox"
+        style="grid-column-start: 3;"
+        id="taskComplete"
+        name="taskComplete"
+        value="complete"
+      />
+      <label for="taskComplete" style="grid-column-start: 3;">
+        Task Complete?</label
+      >
+      <button
+        style="background-color: #00BB00; font-family: 'Poppins', sans-serif; grid-column-start: 3;"
+      >
+        Submit
+      </button>
     </form>
+    <br />
+    <br />
+    <br />
+    <br />
+    <div id="header" style="grid-row-start: 1; grid-row-end: 5">
+      <p>
+        Task Name
+      </p>
+      <p>
+        Task Complete?
+      </p>
+      <p>
+        Task Priority
+      </p>
+      <p>
+        Due Date
+      </p>
+    </div>
+    <div id="list"></div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
