--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="/js/scripts.js"></script>
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <div class="wrapper">
+      <div class="head">
+        <h1>
+          Watchlist
+        </h1>
+      </div>
+      <div class="form">
+        <form>
+          <label for="yourname">Username</label>
+          <input type="text" id="yourname" />
+          <label for="pw">Password</label>
+          <input type="text" id="pw"/>
+          <!--<button id="submitName">submit</button>-->
+          <h3>
+            Update or add to your list:
+          </h3>
+          <p>
+            Our site will sort your list by the priority rating (0-10) you
+            assign to each film! Leave these fields blank and click submit to
+            simply view your list.
+          </p>
+          <label for="movie"> Title </label>
+          <input type="text" id="movie" />
+          <p></p>
+          <label for="rating"> Priority Rating </label>
+          <input type="number" id="rating" min="0" max="10" />
+          <p></p>
+          <button id="submit">submit</button>
+        </form>
+      </div>
+      <div class="listhead">
+        <h2 id="listtitle">
+          Your List:
+        </h2>
+      </div>
+      <div class="yourlist">
+        <ol id="list"></ol>
+      </div>
+      <!--<div class="otherusers">
+        <h3>
+          Other users:
+        </h3>
+        <table id="table">
+          <tr>
+            <th>User</th>
+            <th>Number of Movies</th>
+          </tr>
+        </table>
+      </div> -->
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
