--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,62 @@
   <title>CS4241 Assignment 2</title>
   <meta charset="utf-8">
   <script src="js/scripts.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Heebo">
 </head>
 <body>
-  <form action="">
-    <input type='text' id='yourname' value="your name here">
-    <button id='submitter'>submit</button>
-  </form>
+  <header>
+    <h1>Rudimentary Grade Tracker</h1>
+  </header>
+  <section class="short_section">
+    <h2>How to Use This</h2>
+    <h3></h3>
+    <p>
+      To add an assignment, fill in all three fields and submit.
+    </p>
+    <p>
+      To edit an assignment, use the name of an existing assignment and change the scores.
+    </p>
+    <p>
+      To delete an assignment, use the name of an existing assignment and leave all other fields blank.
+    </p>
+  </section>
+  
+  <section class="short_section">
+    <h2>What is this?</h2>
+    <p>
+      This tool lets you calculate your grade, weighted by the scores of each individual assignment
+      (i.e. 100 points is worth more than 10).
+    </p>
+    <p>
+      The percent score for each assignment and overall is calculated on the server--isn't that nifty?
+      This really is the future of cloud computing.
+    </p>
+  </section>
+  <section class="expanding_section">
+    <h2>
+      Edit Assignments
+    </h2>
+    <form>
+      <input type="text" id="nameInput" placeholder="Assignment Title">
+      <input type="text" id="scoreInput" placeholder="Your Score">
+      <input type="text" id="possibleInput" placeholder="Assignment Value">
+      <button id="submitter">Submit</button>
+    </form>
+    <div id="message_box">
+      Submit an assignment to get started.
+    </div>
+    <div id="total_box">
+      No overall score yet.
+    </div>
+    <table id="data_display">
+      <tr>
+        <th>Assignment Title</th>
+        <th>Your Score</th>
+        <th>Assignment Value</th>
+        <th>Percent Score</th>
+      </tr>
+    </table>
+  </section>
 </body>
 </html>
