--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,26 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <script src="js/scripts.js"></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
-    </form>
+    <div class="get_info">
+      <button id = "check_btn"> CHECK SERVER FIELD </button>
+      <strong id = "check_txt"> NOT UPDATED </strong>
+    </div>
+
+    <div class = "play_button_div" >
+      <button id = "play_btn" >PLAY!</button>
+      <strong id = "play_text"> </strong>
+    </div>
+
+    <div class="input_form">
+      <form action="" id = "submit_form">
+        <input type='text' id='yourname' value="answer here">
+        <button id="submit_btn">submit</button>
+      </form>
+    </div>
+    
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
