--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           <h3>Add an item</h3>
         </div>
         <div>
-          <form name="inputForm" method ="post">
+          <form name="inputForm" method ="post" action="">
             <input type="text" id="youtask" value="Task">
             <input type="date" id="duedate" value="Due Date">
             <button id="myinput">Submit</button>
